Add validation to tags inputs and make them looks better

--- a/src/components/todos/TodoItem/TodoItem.scss
+++ b/src/components/todos/TodoItem/TodoItem.scss
@@ -18,7 +18,11 @@
         color: green;
       }
     }
-
+    &__button {
+      &--small {
+        margin: 10px 0;
+      }
+    }
     &__status {
       display: inline-block;
       width: 70px;
